# darknet

./: .gitignore  CMakeLists.txt  DarknetConfig.cmake.in  DarknetConfigVersion.cmake.in  Makefile  command_to_run
cfg/: dvia.data  yolo-voc.cfg
cmake/: ConfDirs.cmake  GenConfig.cmake
darknet/: CMakeLists.txt  activation_layer.c  activation_layer.h  activations.h  avgpool_layer.c  avgpool_layer.h  batchnorm_layer.c  batchnorm_layer.h  blas.h  col2im.h  compare.c  connected_layer.c  connected_layer.h  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.h  cost_layer.c  cost_layer.h  crnn_layer.c  crnn_layer.h  crop_layer.c  crop_layer.h  cuda.c  cuda.h  data.c  deconvolutional_layer.c  deconvolutional_layer.h  demo.c  detection_layer.c  detection_layer.h  dropout_layer.c  dropout_layer.h  gemm.c  gemm.h  gru_layer.c  gru_layer.h  im2col.h  layer.c  list.c  list.h  (+29 more)
data/: dvia.names
data/dvia_lists/: DVIA_2017_test.txt  DVIA_2017_train.txt  VOC_2007_test.txt  VOC_2007_train.txt  VOC_2007_val.txt  VOC_2012_train.txt  VOC_2012_val.txt  test.big.txt  test.txt  train.all.txt  train.txt
examples/: CMakeLists.txt  Darknet.c  captcha.c  classifier.c  coco.c  detector.c  dice.c  go.c  lsd.c  nightmare.c  regressor.c  rnn.c  rnn_vid.c  segmenter.c  super.c  swag.c  tag.c  voxel.c  writing.c  yolo.c
include/: darknet.h
scripts/: dvia_recall  dvia_train  dvia_validate  voc_label.py
